

syntax = "proto3";

package onight.zjfae.afront;


enum PEAModule{//app独有的接口
	AZJ = 0;
};

enum PEACommand{
	ADS = 0 ;//获取广告信息
	TIP = 1 ;//心灵鸡汤
	MER = 2; //聚合接口
	C01 = 10 ;//后处理配置重新加载
};

message PBAPPAds
{
	string uuid = 1;
	string func_icons = 2;
	string ani_method = 3;
	string ani_params = 4;
	string func_url = 5;
	string platforms = 6;
	string app_vers = 7;
	string show_type = 8;
	int32 interval_min = 9;
	int32 ctrl_iparam = 10;
	string ctrl_strparam = 11;
	int64 inserttime = 12;
	int32 status = 13;
}

message PEAGetAds
{
	string show_type = 1; //显示类型(0:启动页广告,1:首页显示广告,2:登录时候显示)
}

message PEARetAds
{
	string show_type = 1; //显示类型(0:启动页广告,1:首页显示广告,2:登录时候显示)
	repeated PBAPPAds ads = 2;//广告列表 
}


message PBAPPShakeTips
{
	string uuid = 1;
	string tips_title = 2;
	string tips_content = 3;
	string tips_url = 4;
	string platforms = 5;
	string app_vers = 6;
	int64 inserttime = 7;
	int32 status = 8;
}

message PEAGetTips
{
	string  user_id  = 1; //用户id，暂时不用
	int32	count  = 2;//个数
}


message PEARetTips
{
	string  user_id  = 1; //用户id，暂时不用
	repeated PBAPPShakeTips tips = 2;//提示列表
}


message PEAConfigReload
{
	string  oper_id  = 1; //操作者id，暂时不用
}


message PEARetConfigReload
{
	string ret_code  = 1; //返回码
	string ret_message  = 2;//提示信息
}



message PBFramePacket{
	string gcmd = 1 ;//代理的gcmd
	string exts = 2;//扩展头
	string jsbody = 3 [  jstype  = JS_NORMAL ];//请求的json数据
	bytes pbbody = 4;//请求的pb数据
	string pbname = 5 ;//代理的pbname 
	string pack_id = 11;//包在多个请求中的的id
	repeated PBFramePacket nextpacks = 20;//下一个请求
	repeated string clonefields = 21;//传到给下个节点的属性字段
}	

message PWMergeProxy
{
	repeated PBFramePacket packets = 1 ;//需要合并的请求
}

message PWRetMerges
{
	int32	retcode = 1;//返回状态码
	string  retmsg  = 2;//返回的消息信息
	repeated PBFramePacket retpack = 3 ;//需要合并的请求
}

